@@ -26,6 +26,9 @@ Library
 
 - Issue #9354: Provide getsockopt() in asyncore's file_wrapper.
 
+- Issue #7372: Fix pstats regression when stripping paths from profile
+  data generated with the profile module.
+
 - Issue #4108: In urllib.robotparser, if there are multiple 'User-agent: *'
   entries, consider the first one.
 
